[package]
name = "tortor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
sha1 = "0.10.5"
tokio = { version = "1.23.0", features = ["full"] }
reqwest = { version = "0.11.13",  features = ["json"] }
