[package]
name = "tortor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
sha1 = "0.10.5"
tokio = { version = "1.23.0", features = ["full"] }
url = "2.3.1"
log = "0.4.17"
simple_logger = "4.0.0"
rand = "0.8.5"
